# velocity-launcher

./: README.md  design.html.txt  package-lock.json  package.json  tailwind.config.js
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src/components/: Sidebar.tsx  TitleBar.tsx
src/pages/: Home.tsx  InstanceDetails.tsx  Instances.tsx  Mods.tsx  Servers.tsx  Settings.tsx  Skins.tsx
src/stores/: appStore.ts
src/types/: index.ts
